spacing bug resolved

--- a/docs/src/pages/styles.module.css
+++ b/docs/src/pages/styles.module.css
@@ -6,7 +6,7 @@
  */
 
 .mainContent {
-  margin-top: 270px;
+  margin-top: 300px;
 }
 
 @media screen and (max-width: 1024px) {
